fix exceptions , add search, add Constant, properties